# resume-ai

./: .env.example  .gitignore  README.md  celery_app.py  cmd.py  endpoints.http  main.py  pyproject.toml  requirements.txt  setup.py  setup_project.py
lib/: cover_letter_generator.py  objective_generator.py  pdf_utils.py  tasks.py
src/resume_ai/: __init__.py  app.py
src/resume_ai/services/: ai_service.py  document_service.py
src/resume_ai/utils/: __init__.py  file_utils.py
utils/: __init__.py  file_utils.py  pdf_utils.py
